fix: correct some spacing issues

--- a/src/css/tailwind_merged.css
+++ b/src/css/tailwind_merged.css
@@ -838,16 +838,8 @@
         margin-top: calc(var(--spacing) * 4);
     }
 
-    .mt-4\! {
-        margin-top: calc(var(--spacing) * 4) !important;
-    }
-
     .mt-5 {
         margin-top: calc(var(--spacing) * 5);
-    }
-
-    .mt-5\! {
-        margin-top: calc(var(--spacing) * 5) !important;
     }
 
     .mt-6 {
@@ -912,10 +904,6 @@
 
     .mb-6 {
         margin-bottom: calc(var(--spacing) * 6);
-    }
-
-    .mb-6\! {
-        margin-bottom: calc(var(--spacing) * 6) !important;
     }
 
     .mb-8 {
